--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
                                             <div class="help-block with-errors"></div>
                                         </div>
                                         <div class="form-group">
-                                            <div class="g-recaptcha" data-sitekey="6LcqgbkUAAAAAB2ZLxZWspj2cgTBxmH2zA7MSwTH"></div>
+                                            <script src="https://www.google.com/recaptcha/api.js?render=6LeeQd4UAAAAAI8s7UjxycarhGg_oGKOj8dmo1cR"></script>
                                         </div>
                                         <div class="submit-button">
                                             <button class="btn btn-common" id="submit" type="submit">Enviar mensaje</button>
@@ -603,6 +603,15 @@
     <script src="assets/js/jquery.slicknav.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/cookies.js"></script>
+    <script>
+        grecaptcha.ready(function() {
+            grecaptcha.execute('6LeeQd4UAAAAAI8s7UjxycarhGg_oGKOj8dmo1cR', {
+                action: 'homepage'
+            }).then(function(token) {
+
+            });
+        });
+    </script>
 </body>
 
 </html>
