apartado cursos - agregado curso modulos prestashop

--- a/index.html
+++ b/index.html
@@ -331,25 +331,31 @@
                             </li>
                             <li>
                                 <div class="content-text">
-                                    <h3 class="line-title">Curso GIT - Online</h3>
+                                    <h3 class="line-title">Módulos Prestashop - Online</h3>
+                                    <span>Abril 2021</span>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="content-text">
+                                    <h3 class="line-title">GIT - Online</h3>
                                     <span>Febrero 2020</span>
                                 </div>
                             </li>
                             <li>
                                 <div class="content-text">
-                                    <h3 class="line-title">Curso Symfony 5 - Online</h3>
+                                    <h3 class="line-title">Symfony 5 - Online</h3>
                                     <span>Enero 2020</span>
                                 </div>
                             </li>
                             <li>
                                 <div class="content-text">
-                                    <h3 class="line-title">Curso Programador Wordpress - Online</h3>
+                                    <h3 class="line-title">Programador Wordpress - Online</h3>
                                     <span>Septiembre 2019</span>
                                 </div>
                             </li>
                             <li>
                                 <div class="content-text">
-                                    <h3 class="line-title">Curso Desarrollo de Aplicaciones Web - Cebank</h3>
+                                    <h3 class="line-title">Desarrollo de Aplicaciones Web - Cebank</h3>
                                     <span>Abril 2019 - Junio 2019</span>
                                 </div>
                             </li>
