--- a/index.html
+++ b/index.html
@@ -331,6 +331,12 @@
                             </li>
                             <li>
                                 <div class="content-text">
+                                    <h3 class="line-title">Creación de servidores locales - Online</h3>
+                                    <span>Abril 2021</span>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="content-text">
                                     <h3 class="line-title">Módulos Prestashop - Online</h3>
                                     <span>Abril 2021</span>
                                 </div>
