--- a/index.html
+++ b/index.html
@@ -331,6 +331,12 @@
                             </li>
                             <li>
                                 <div class="content-text">
+                                    <h3 class="line-title">SASS - Online</h3>
+                                    <span>Julio 2021</span>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="content-text">
                                     <h3 class="line-title">Creación de servidores locales - Online</h3>
                                     <span>Abril 2021</span>
                                 </div>
@@ -378,7 +384,7 @@
                             <li>
                                 <div class="content-text">
                                     <h3 class="line-title">Desarrollador Web - Lombok</h3>
-                                    <span>Junio 2019 - Presente</span>
+                                    <span>Junio 2019 - Marzo 2020</span>
                                 </div>
                             </li>
                             <li>
