--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <div class="contents">
                             <p class="script-font wow fadeInUp" data-wow-delay="0.2s">Hola, soy</p>
                             <h1 class="head-title wow fadeInUp" data-wow-delay="0.4s">Iñaki Balenciaga Bueno</h1>
-                            <p class="script-font wow fadeInUp" data-wow-delay="0.6s">Programador Frontend y Backend</p>
+                            <p class="script-font wow fadeInUp" data-wow-delay="0.6s">Programador Full Stack</p>
                             <ul class="social-icon wow fadeInUp" data-wow-delay="0.8s">
                                 <li>
                                     <a class="facebook" href="https://www.linkedin.com/in/ibalenciaga/" target="_blank"><i class="icon-social-linkedin"></i></a>
