--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="description" content="Este es el Portfolio de Iñaki Balenciaga Bueno (ibalenciaga). Aquí encontrarás información sobre mis conocimientos del desarrollo de páginas web. También podrás ver mi formación académica y mi experiencia laboral como programador web frontend y backend">
+    <meta name="description" content="Este es el Portfolio de Iñaki Balenciaga Bueno - ibalenciaga -. Aquí encontrarás información sobre mis conocimientos del desarrollo de páginas web. También podrás ver mi formación académica y mi experiencia laboral como programador web frontend y backend">
     <meta name="keywords" content="iñaki balenciaga bueno, ibalenciaga, portfolio, desarrollo web, backend, frontend, html5, css3, javascript, jquery, php, wordpress, prestashop, mysql, git">
     <meta name="author" content="Iñaki Balenciaga Bueno">
     <meta name="robots" content="index" />
@@ -179,7 +179,7 @@
         <div class="container">
             <div class="row">
                 <!-- Services item -->
-                <div class="col-4 col-sm-4 col-md-3 col-lg-2 col-xl-1 service">
+                <div class="col-3 col-sm-3 col-md-2 col-lg-2 col-xl-1 service">
                     <div class="services-item wow fadeInDown" data-wow-delay="0.3s">
                         <div class="icon">
                             <img class="img-fluid" src="assets/img/conocimientos/html5.png" alt="Conociemientos de html5" title="Conociemientos de html5">
@@ -187,7 +187,7 @@
                     </div>
                 </div>
                 <!-- Services item -->
-                <div class="col-4 col-sm-4 col-md-3 col-lg-2 col-xl-1 service">
+                <div class="col-3 col-sm-3 col-md-2 col-lg-2 col-xl-1 service">
                     <div class="services-item wow fadeInDown" data-wow-delay="0.6s">
                         <div class="icon">
                             <img class="img-fluid" src="assets/img/conocimientos/css3.png" alt="Conociemientos de css3" title="Conociemientos de css3">
@@ -195,7 +195,7 @@
                     </div>
                 </div>
                 <!-- Services item -->
-                <div class="col-4 col-sm-4 col-md-3 col-lg-2 col-xl-1 service">
+                <div class="col-3 col-sm-3 col-md-2 col-lg-2 col-xl-1 service">
                     <div class="services-item wow fadeInDown" data-wow-delay="0.9s">
                         <div class="icon">
                             <img class="img-fluid" src="assets/img/conocimientos/javascript.png" alt="Conociemientos de javascript" title="Conociemientos de javascript">
@@ -203,7 +203,7 @@
                     </div>
                 </div>
                 <!-- Services item -->
-                <div class="col-4 col-sm-4 col-md-3 col-lg-2 col-xl-1 service">
+                <div class="col-3 col-sm-3 col-md-2 col-lg-2 col-xl-1 service">
                     <div class="services-item wow fadeInDown" data-wow-delay="1.2s">
                         <div class="icon">
                             <img class="img-fluid" src="assets/img/conocimientos/jquery.png" alt="Conociemientos de jquery" title="Conociemientos de jquery">
@@ -211,7 +211,7 @@
                     </div>
                 </div>
                 <!-- Services item -->
-                <div class="col-4 col-sm-4 col-md-3 col-lg-2 col-xl-1 service">
+                <div class="col-3 col-sm-3 col-md-2 col-lg-2 col-xl-1 service">
                     <div class="services-item wow fadeInDown" data-wow-delay="0.3s">
                         <div class="icon">
                             <img class="img-fluid" src="assets/img/conocimientos/php.png" alt="Conociemientos de php" title="Conociemientos de php">
@@ -219,7 +219,7 @@
                     </div>
                 </div>
                 <!-- Services item -->
-                <div class="col-4 col-sm-4 col-md-3 col-lg-2 col-xl-1 service">
+                <div class="col-3 col-sm-3 col-md-2 col-lg-2 col-xl-1 service">
                     <div class="services-item wow fadeInDown" data-wow-delay="1.2s">
                         <div class="icon">
                             <img class="img-fluid" src="assets/img/conocimientos/symfony.png" alt="Conociemientos de symfony" title="Conociemientos de symfony">
@@ -227,7 +227,7 @@
                     </div>
                 </div>
                 <!-- Services item -->
-                <div class="col-4 col-sm-4 col-md-3 col-lg-2 col-xl-1 service">
+                <div class="col-3 col-sm-3 col-md-2 col-lg-2 col-xl-1 service">
                     <div class="services-item wow fadeInDown" data-wow-delay="0.6s">
                         <div class="icon">
                             <img class="img-fluid" src="assets/img/conocimientos/java.png" alt="Conociemientos de java" title="Conociemientos de java">
@@ -235,7 +235,7 @@
                     </div>
                 </div>
                 <!-- Services item -->
-                <div class="col-4 col-sm-4 col-md-3 col-lg-2 col-xl-1 service">
+                <div class="col-3 col-sm-3 col-md-2 col-lg-2 col-xl-1 service">
                     <div class="services-item wow fadeInDown" data-wow-delay="0.9s">
                         <div class="icon">
                             <img class="img-fluid" src="assets/img/conocimientos/mysql.png" alt="Conociemientos de mysql" title="Conociemientos de mysql">
@@ -243,7 +243,7 @@
                     </div>
                 </div>
                 <!-- Services item -->
-                <div class="col-4 col-sm-4 col-md-3 col-lg-2 col-xl-1 service">
+                <div class="col-3 col-sm-3 col-md-2 col-lg-2 col-xl-1 service">
                     <div class="services-item wow fadeInDown" data-wow-delay="1.2s">
                         <div class="icon">
                             <img class="img-fluid" src="assets/img/conocimientos/wordpress.png" alt="Conociemientos de wordpress" title="Conociemientos de wordpress">
@@ -251,7 +251,7 @@
                     </div>
                 </div>
                 <!-- Services item -->
-                <div class="col-4 col-sm-4 col-md-3 col-lg-2 col-xl-1 service">
+                <div class="col-3 col-sm-3 col-md-2 col-lg-2 col-xl-1 service">
                     <div class="services-item wow fadeInDown" data-wow-delay="1.2s">
                         <div class="icon">
                             <img class="img-fluid" src="assets/img/conocimientos/prestashop.png" alt="Conociemientos de prestashop" title="Conociemientos de prestashop">
@@ -259,7 +259,7 @@
                     </div>
                 </div>
                 <!-- Services item -->
-                <div class="col-4 col-sm-4 col-md-3 col-lg-2 col-xl-1 service">
+                <div class="col-3 col-sm-3 col-md-2 col-lg-2 col-xl-1 service">
                     <div class="services-item wow fadeInDown" data-wow-delay="1.2s">
                         <div class="icon">
                             <img class="img-fluid" src="assets/img/conocimientos/joomla.png" alt="Conociemientos de joomla" title="Conociemientos de joomla">
@@ -267,7 +267,7 @@
                     </div>
                 </div>
                 <!-- Services item -->
-                <div class="col-4 col-sm-4 col-md-3 col-lg-2 col-xl-1 service">
+                <div class="col-3 col-sm-3 col-md-2 col-lg-2 col-xl-1 service">
                     <div class="services-item wow fadeInDown" data-wow-delay="1.2s">
                         <div class="icon">
                             <img class="img-fluid" src="assets/img/conocimientos/photoshop.png" alt="Conociemientos de photoshop" title="Conociemientos de photoshop">
