--- a/index.html
+++ b/index.html
@@ -383,6 +383,12 @@
                             </li>
                             <li>
                                 <div class="content-text">
+                                    <h3 class="line-title">Desarrollador Web - OARO</h3>
+                                    <span>Diciembre 2021 - Marzo 2022</span>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="content-text">
                                     <h3 class="line-title">Desarrollador Web - Lombok</h3>
                                     <span>Junio 2019 - Marzo 2020</span>
                                 </div>
