agregados nuevos cursos.

--- a/politica_cookies.html
+++ b/politica_cookies.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-139125860-1"></script>
@@ -67,22 +66,22 @@
                 <div class="collapse navbar-collapse" id="main-navbar">
                     <ul class="onepage-nev navbar-nav mr-auto w-100 justify-content-end clearfix">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html#hero-area">Inicio</a>
+                            <a class="nav-link" href="index.php#hero-area">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html#about">Sobre mi</a>
+                            <a class="nav-link" href="index.php#about">Sobre mi</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html#services">Conocimientos</a>
+                            <a class="nav-link" href="index.php#services">Conocimientos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html#resume">Recorrido Profesional</a>
+                            <a class="nav-link" href="index.php#resume">Recorrido Profesional</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html#portfolios">Trabajos</a>
+                            <a class="nav-link" href="index.php#portfolios">Trabajos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html#contact">Contacto</a>
+                            <a class="nav-link" href="index.php#contact">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -90,22 +89,22 @@
             <!-- Mobile Menu Start -->
             <ul class="onepage-nev mobile-menu">
                 <li>
-                    <a href="index.html#hero-area">Inicio</a>
+                    <a href="index.php#hero-area">Inicio</a>
                 </li>
                 <li>
-                    <a href="index.html#about">Sobre mi</a>
+                    <a href="index.php#about">Sobre mi</a>
                 </li>
                 <li>
-                    <a href="index.html#services">Conocimientos</a>
+                    <a href="index.php#services">Conocimientos</a>
                 </li>
                 <li>
-                    <a href="index.html#resume">Recorrido Profesional</a>
+                    <a href="index.php#resume">Recorrido Profesional</a>
                 </li>
                 <li>
-                    <a href="index.html#portfolios">Trabajos</a>
+                    <a href="index.php#portfolios">Trabajos</a>
                 </li>
                 <li>
-                    <a href="index.html#contact">Contacto</a>
+                    <a href="index.php#contact">Contacto</a>
                 </li>
             </ul>
             <!-- Mobile Menu End -->
